dpanel-api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dpanel-api
  namespace: dclaw-core
  labels:
    app.kubernetes.io/name: dpanel-api
    app.kubernetes.io/part-of: dclaw-platform
    app.kubernetes.io/component: api
spec:
  type: NodePort
  ports:
    - port: 8085
      targetPort: http
      protocol: TCP
      name: http
      nodePort: 30080
  selector:
    app.kubernetes.io/name: dpanel-api
